[package]
name = "val-test"
version = "0.2.3"
edition = "2018"
description = "test lib for crate"
license = "MIT"
documentation="https://github.com/ogtayhuseynov0/rust-test-validator"
homepage="https://github.com/ogtayhuseynov0/rust-test-validator"
repository="https://github.com/ogtayhuseynov0/rust-test-validator"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
regex = "1"
